--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 node_modules
 dist/full.render.js
 dist/viz.js
-dist/simplification*.js
+dist/simplication*.js
 # elm-package generated files
 elm-stuff
 # elm-repl generated files
