Applied my no reducible lambdas elm-review rule

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "elm": "^0.19.1-5",
     "elm-format": "^0.8.5",
+    "elm-review": "^2.7.0",
     "elm-test": "^0.19.1-revision7",
     "uglifyjs": "^2.4.11"
   },
